# pop3

./: .gitignore  Cargo.toml  DESIGN.md  FACTS.md  LUA_MODDING_RESEARCH.md  README.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-core-object-system/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md  1-CONTEXT.md
.planning/phases/02-economy-and-combat/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  (+16 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
data/screencuts/: README.md
docs/: index.md
docs/plans/: game-completion-roadmap.md  person-state-animation-checklist.md
docs/specs/: buildings.md  re_meta.md  sprites_and_animation.md
scripts/: capture_hut_construction.txt  capture_unit_animations.txt
shaders/: construction_site.wgsl  landscape.wgsl  objects_tex.wgsl
src/: lib.rs  main.rs
src/data/: animation.rs  bl320.rs  font.rs  landscape.rs  level.rs  level_special.rs  mod.rs  objects.rs  pls.rs  psfb.rs  strings.rs  types.rs  units.rs
src/engine/: command.rs  frame.rs  mod.rs  session.rs  world.rs
src/extract/: animations.rs  building_panel.rs  hud.rs  mod.rs  structures.rs  units.rs
src/render/: app.rs  buildings.rs  camera.rs  color_model.rs  default_model.rs  envelop.rs  mod.rs  model.rs  picking.rs  terrain.rs  tex_model.rs
tests/: real_level_hut.rs  real_unit_animations.rs
(+96 files in other folders)
