[package]
name = "pop3"
version = "0.1.0"
edition = "2021"
default-run = "pop3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "28.0"
winit = "0.30"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
cgmath = "0.18.0"
image = "0.24.3"
num-traits = "0.2.15"
clap = "4.0.14"
log = "0.4.17"
env_logger = "0.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
